--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic'
         rel='stylesheet'>
     <!-- CSS -->
-
-
+    <link rel="shortcut icon" href="dist/img/img_main.jpg" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.min.css">
     <!-- <link rel="stylesheet" href="dist/css/orange.css" id="light-mode" /> -->
     <link rel="stylesheet" href="dist/css/dark.css" id="dark-mode" disabled />
@@ -94,11 +93,11 @@
         <!-- Footer -->
         <footer>
             <div class="soc">
-                <a target="_blank" href="https://dribbble.com/"><span class="ion ion-social-dribbble"></span></a>
-                <a target="_blank" href="https://twitter.com/"><span class="ion ion-social-twitter"></span></a>
-                <a target="_blank" href="https://github.com/"><span class="ion ion-social-github"></span></a>
-                <a target="_blank" href="https://www.instagram.com/"><span
+                <a target="_blank" href="https://github.com/kingcell2"><span class="ion ion-social-github"></span></a>
+                <a target="_blank" href="https://instagram.com/hntrung09/"><span
                         class="ion ion-social-instagram-outline"></span></a>
+                <a target="_blank" href="https://facebook.com/TrungNgocHoang9x/"><span
+                        class="ion ion-social-facebook"></span></a>
             </div>
             <div class="copy">© 2021 Trung. All rights reserved.</div>
             <div class="clr"></div>
