--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-
+    <link rel="shortcut icon" href="dist/img/img_main.jpg" type="image/x-icon">
     <!-- Load Fonts -->
     <link
         href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic'
@@ -94,7 +94,10 @@
                     </div>
                     <div class="desc">
                         <p>
-                            Sống nội tâm, thích màu hồng, ghét sự giả dối
+                            <strong> Able:</strong> I am able to handle multiple tasks on a daily basis.<br>
+                            <strong> Creative:</strong> I use a creative approach to problem solve.<br>
+                            <strong>Dependable:</strong> I am a dependable person who is great at time management.<br>
+                            <strong>Energetic:</strong> I am always energetic and eager to learn new skills.<br>
                         </p>
 
                         <div class="info-list">
@@ -102,7 +105,7 @@
                                 <li><strong>Name:</strong> Hoang Ngoc Trung</li>
                                 <li><strong>Age:</strong> 23 Years</li>
                                 <li><strong>Job:</strong> Web FE Developer</li>
-                                <li><strong>Citizenship:</strong> VietNam</li>
+                                <li><strong>Nationality:</strong> VietNam</li>
                                 <li><strong>Residence: </strong> Ho Chi Minh</li>
                                 <li><strong>E-mail:</strong> trunghoanga2@gmail.com</li>
                             </ul>
@@ -126,8 +129,7 @@
                                     <div class="date">11/2020 - Present</div>
                                     <div class="name">Front-end Developer - Newnet Stock</div>
                                     <p>
-                                        Morbi nulla arcu, pellentesque sed egestas in, tempor eget felis. Nullam
-                                        tincidunt augue in leo feugiat, quis interdum nisi sollicitudin.
+                                        Project on my company makes security
                                     </p>
                                 </div>
                                 <div class="resume-item">
@@ -165,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cols">
+                    <div class="cols mt-5">
                         <div class="col col-md">
                             <div class="title">
                                 <div class="title_inner">Projects</div>
@@ -177,10 +179,10 @@
                                     </div>
                                     <p>
                                         Link Demo: <a href="http://overt-swing.surge.sh/home.html"
-                                            target="_blank">http://overt-swing.surge.sh/home.html</a>
+                                            target="_blank">Overt-swing.surge.sh</a>
                                     </p>
                                     <p>GitHub: <a
-                                            href="https://github.com/kingcell2/MarketoShop">https://github.com/kingcell2/MarketoShop</a>
+                                            href="https://github.com/kingcell2/MarketoShop">Github.com/kingcell2</a>
                                     </p>
                                     <ul>
                                         <li>Customer: Personal</li>
@@ -209,25 +211,28 @@
                                         Link Demo: <a href="" target="_blank"></a>
                                     </p>
                                     <p>GitHub:<a href="https://github.com/kingcell2/SellKeychains" target="_blank">
-                                            https://github.com/kingcell2/SellKeychains</a>
+                                            github.com/kingcell2</a>
                                     </p>
                                     <ul>
-                                        <li>Customer: Personal</li>
-                                        <li>Team size: 1</li>
-                                        <li>Description: A project for Web Programing Subject at the University.</li>
-                                        <li>The site allows users to place an order or pay on delivery. Besides, there
+                                        <li><strong>Customer:</strong> Personal</li>
+                                        <li><strong>Team size:</strong> 1</li>
+                                        <li><strong>Description:</strong> A project for Web Programing Subject at the
+                                            University.</li>
+                                        <li class="ml-2">The site allows users to place an order or pay on delivery.
+                                            Besides, there
                                             is also allowing
                                             administrators to add, delete, and edit products, user accounts.
                                         </li>
-                                        <li>Technologies used:
+                                        <li><strong>Technologies used:</strong>
                                             <ul>
-                                                <li>Front end: HTML/CSS/JAVASCRIPT/JQUERY</li>
-                                                <li>Back end: JAVA (Spring MCV)</li>
+                                                <li class="ml-2"><strong>Front end:</strong> HTML/CSS/JAVASCRIPT/JQUERY
+                                                </li>
+                                                <li class="ml-2"><strong>Back end:</strong> JAVA (Spring MCV)</li>
                                             </ul>
                                         </li>
-                                        <li>Database: Microsoft SQL Server</li>
-                                        <li>My position: Developer</li>
-                                        <li>My responsibillties: Optimize code, FixBug</li>
+                                        <li><strong>Database:</strong> Microsoft SQL Server</li>
+                                        <li><strong>My position:</strong> Developer</li>
+                                        <li><strong>My responsibillties:</strong> Optimize code, FixBug</li>
                                     </ul>
                                 </div>
                                 <div class="resume-item">
@@ -547,11 +552,11 @@
         <!-- Footer -->
         <footer>
             <div class="soc">
-                <a target="_blank" href="https://dribbble.com/"><span class="ion ion-social-dribbble"></span></a>
-                <a target="_blank" href="https://twitter.com/"><span class="ion ion-social-twitter"></span></a>
-                <a target="_blank" href="https://github.com/"><span class="ion ion-social-github"></span></a>
-                <a target="_blank" href="https://www.instagram.com/"><span
+                <a target="_blank" href="https://github.com/kingcell2"><span class="ion ion-social-github"></span></a>
+                <a target="_blank" href="https://instagram.com/hntrung09/"><span
                         class="ion ion-social-instagram-outline"></span></a>
+                <a target="_blank" href="https://facebook.com/TrungNgocHoang9x/"><span
+                        class="ion ion-social-facebook"></span></a>
             </div>
             <div class="copy">© 2021 Trung. All rights reserved.</div>
             <div class="clr"></div>
