--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link rel="shortcut icon" href="dist/img/img_main.jpg" type="image/x-icon">
 
     <!-- Load Fonts -->
     <link
@@ -154,11 +155,11 @@
         <!-- Footer -->
         <footer>
             <div class="soc">
-                <a target="_blank" href="https://dribbble.com/"><span class="ion ion-social-dribbble"></span></a>
-                <a target="_blank" href="https://twitter.com/"><span class="ion ion-social-twitter"></span></a>
-                <a target="_blank" href="https://github.com/"><span class="ion ion-social-github"></span></a>
-                <a target="_blank" href="https://www.instagram.com/"><span
+                <a target="_blank" href="https://github.com/kingcell2"><span class="ion ion-social-github"></span></a>
+                <a target="_blank" href="https://instagram.com/hntrung09/"><span
                         class="ion ion-social-instagram-outline"></span></a>
+                <a target="_blank" href="https://facebook.com/TrungNgocHoang9x/"><span
+                        class="ion ion-social-facebook"></span></a>
             </div>
             <div class="copy">© 2021 Trung. All rights reserved.</div>
             <div class="clr"></div>
