--- a/contacts.html
+++ b/contacts.html
@@ -16,6 +16,7 @@
     <link
         href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic'
         rel='stylesheet'>
+    <link rel="shortcut icon" href="dist/img/img_main.jpg" type="image/x-icon">
 
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="dist/css/orange.min.css" id="light-mode" /> -->
@@ -110,6 +111,13 @@
                                 60/A8 Canh Ve, Tang Nhon Phu Ward, District 9, Ho Chi Minh City
                             </p>
                         </div>
+                        <div class="service-item">
+                            <div class="icon"><span class="ion ion-social-facebook"></span></div>
+                            <div class="name">Facebook</div>
+                            <p>
+                                60/A8 Canh Ve, Tang Nhon Phu Ward, District 9, Ho Chi Minh City
+                            </p>
+                        </div>
                     </div>
                     <div class="contact_form">
                         <form id="cform" method="post">
@@ -139,11 +147,11 @@
         <!-- Footer -->
         <footer>
             <div class="soc">
-                <a target="_blank" href="https://dribbble.com/"><span class="ion ion-social-dribbble"></span></a>
-                <a target="_blank" href="https://twitter.com/"><span class="ion ion-social-twitter"></span></a>
-                <a target="_blank" href="https://github.com/"><span class="ion ion-social-github"></span></a>
-                <a target="_blank" href="https://www.instagram.com/"><span
+                <a target="_blank" href="https://github.com/kingcell2"><span class="ion ion-social-github"></span></a>
+                <a target="_blank" href="https://instagram.com/hntrung09/"><span
                         class="ion ion-social-instagram-outline"></span></a>
+                <a target="_blank" href="https://facebook.com/TrungNgocHoang9x/"><span
+                        class="ion ion-social-facebook"></span></a>
             </div>
             <div class="copy">© 2021 Trung. All rights reserved.</div>
             <div class="clr"></div>
