--- a/contacts.html
+++ b/contacts.html
@@ -13,9 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
     <!-- Load Fonts -->
-    <link
-        href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic'
-        rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic' rel='stylesheet'>
     <link rel="shortcut icon" href="dist/img/img_main.jpg" type="image/x-icon">
 
     <!-- CSS -->
@@ -114,9 +112,17 @@
                         <div class="service-item">
                             <div class="icon"><span class="ion ion-social-facebook"></span></div>
                             <div class="name">Facebook</div>
-                            <p>
-                                60/A8 Canh Ve, Tang Nhon Phu Ward, District 9, Ho Chi Minh City
-                            </p>
+                            <a href="https://facebook.com/TrungNgocHoang9x" target="_blank">Trung Ngoc Hoang</a>
+                        </div>
+                        <div class="service-item">
+                            <div class="icon"><span class="ion ion-social-github"></span></div>
+                            <div class="name">GitHub</div>
+                            <a href="https://github.com/kingcell2" target="_blank">Kingcell2</a>
+                        </div>
+                        <div class="service-item">
+                            <div class="icon"><span class="ion ion-social-instagram"></span></div>
+                            <div class="name">Instagram</div>
+                            <a href="https://github.com/kingcell2" target="_blank">hntrung09</a>
                         </div>
                     </div>
                     <div class="contact_form">
@@ -130,8 +136,7 @@
                             <div class="group-val ct-gr">
                                 <textarea name="message" placeholder="Message"></textarea>
                             </div>
-                            <a href="#" class="btn fill" onclick="$('#cform').submit(); return false;"
-                                data-text="Send Message">Send Message</a>
+                            <a href="#" class="btn fill" onclick="$('#cform').submit(); return false;" data-text="Send Message">Send Message</a>
                         </form>
                         <div class="alert-success">
                             <p>
