--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
                                     Hoang</span>
                             </div>
                             <div class="h-subtitle typing-subtitle">
-                                <p>Front-end Developer!</p>
-                                <p>Html/Css/JavaScript!</p>
-                                <p>jQuery/Boostrap/Ajax/Json/VueJs!</p>
+                                <p>Developer!</p>
+                                <p>Html/Css/JavaScript,jQuery!</p>
+                                <p>VueJs, ReactJs, React Native, Ionic FrameWork</p>
+                                <p>Node JS, MongoDB</p>
                                 <p>Based in Ho Chi Minh City.</p>
                             </div>
                             <span class="typed-subtitle"></span>
